--- a/Goals/Base.lproj/Main.storyboard
+++ b/Goals/Base.lproj/Main.storyboard
@@ -276,6 +276,10 @@
                                                         <real key="value" value="15"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="dateEditingBegan:" destination="MrB-al-WmQ" eventType="editingDidBegin" id="7bV-yI-QPH"/>
+                                                    <action selector="dateEditingEnded:" destination="MrB-al-WmQ" eventType="editingDidEnd" id="KgG-J7-fdA"/>
+                                                </connections>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COLOR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J6S-DR-juc">
                                                 <rect key="frame" x="16" y="356" width="52.5" height="20.5"/>
