Name can be a maxium of 30 characters. Closes #16

--- a/Goals/Base.lproj/Main.storyboard
+++ b/Goals/Base.lproj/Main.storyboard
@@ -251,6 +251,9 @@
                                                                 <real key="value" value="15"/>
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
+                                                        <connections>
+                                                            <action selector="nameChanged:" destination="MrB-al-WmQ" eventType="editingChanged" id="WkV-cX-z4A"/>
+                                                        </connections>
                                                     </textField>
                                                 </subviews>
                                                 <constraints>
